// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiExpression props color accent is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiExpression testClass1 testClass2 euiExpression-isUppercase euiExpression-inline euiExpression--accent"
  data-test-subj="test subject string"
>
  <span
    class="euiExpression__description"
  >
    the answer is
  </span>
   
  <span
    class="euiExpression__value"
  >
    42
  </span>
</span>
`;

exports[`EuiExpression props color danger is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiExpression testClass1 testClass2 euiExpression-isUppercase euiExpression-inline euiExpression--danger"
  data-test-subj="test subject string"
>
  <span
    class="euiExpression__description"
  >
    the answer is
  </span>
   
  <span
    class="euiExpression__value"
  >
    42
  </span>
</span>
`;

exports[`EuiExpression props color primary is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiExpression testClass1 testClass2 euiExpression-isUppercase euiExpression-inline euiExpression--primary"
  data-test-subj="test subject string"
>
  <span
    class="euiExpression__description"
  >
    the answer is
  </span>
   
  <span
    class="euiExpression__value"
  >
    42
  </span>
</span>
`;

exports[`EuiExpression props color secondary is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiExpression testClass1 testClass2 euiExpression-isUppercase euiExpression-inline euiExpression--secondary"
  data-test-subj="test subject string"
>
  <span
    class="euiExpression__description"
  >
    the answer is
  </span>
   
  <span
    class="euiExpression__value"
  >
    42
  </span>
</span>
`;

exports[`EuiExpression props color subdued is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiExpression testClass1 testClass2 euiExpression-isUppercase euiExpression-inline euiExpression--subdued"
  data-test-subj="test subject string"
>
  <span
    class="euiExpression__description"
  >
    the answer is
  </span>
   
  <span
    class="euiExpression__value"
  >
    42
  </span>
</span>
`;

exports[`EuiExpression props color warning is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiExpression testClass1 testClass2 euiExpression-isUppercase euiExpression-inline euiExpression--warning"
  data-test-subj="test subject string"
>
  <span
    class="euiExpression__description"
  >
    the answer is
  </span>
   
  <span
    class="euiExpression__value"
  >
    42
  </span>
</span>
`;

exports[`EuiExpression props descriptionWidth changes the description&apos;s width when using columns 1`] = `
<span
  class="euiExpression euiExpression-isUppercase euiExpression-columns euiExpression--danger"
>
  <span
    class="euiExpression__description"
    style="flex-basis:50px"
  >
    the answer is
  </span>
   
  <span
    class="euiExpression__value"
  >
    42
  </span>
  <div
    class="euiExpression__icon"
    color="danger"
    data-euiicon-type="alert"
  />
</span>
`;

exports[`EuiExpression props display changes the layout 1`] = `
<span
  class="euiExpression euiExpression-isUppercase euiExpression-columns euiExpression--secondary"
>
  <span
    class="euiExpression__description"
    style="flex-basis:20%"
  >
    the answer is
  </span>
   
  <span
    class="euiExpression__value"
  >
    42
  </span>
</span>
`;

exports[`EuiExpression props isActive false renders inactive 1`] = `
<span
  class="euiExpression euiExpression-isUppercase euiExpression-inline euiExpression--secondary"
>
  <span
    class="euiExpression__description"
  >
    the answer is
  </span>
   
  <span
    class="euiExpression__value"
  >
    42
  </span>
</span>
`;

exports[`EuiExpression props isActive true renders active 1`] = `
<span
  class="euiExpression euiExpression-isActive euiExpression-isUppercase euiExpression-inline euiExpression--secondary"
>
  <span
    class="euiExpression__description"
  >
    the answer is
  </span>
   
  <span
    class="euiExpression__value"
  >
    42
  </span>
</span>
`;

exports[`EuiExpression props isInvalid true renders error state when using columns 1`] = `
<span
  class="euiExpression euiExpression-isUppercase euiExpression-columns euiExpression--danger"
>
  <span
    class="euiExpression__description"
    style="flex-basis:20%"
  >
    the answer is
  </span>
   
  <span
    class="euiExpression__value"
  >
    42
  </span>
  <div
    class="euiExpression__icon"
    color="danger"
    data-euiicon-type="alert"
  />
</span>
`;

exports[`EuiExpression props uppercase false renders inherited case 1`] = `
<span
  class="euiExpression euiExpression-inline euiExpression--secondary"
>
  <span
    class="euiExpression__description"
  >
    the answer is
  </span>
   
  <span
    class="euiExpression__value"
  >
    42
  </span>
</span>
`;

exports[`EuiExpression props uppercase true renders uppercase 1`] = `
<span
  class="euiExpression euiExpression-isUppercase euiExpression-inline euiExpression--secondary"
>
  <span
    class="euiExpression__description"
  >
    the answer is
  </span>
   
  <span
    class="euiExpression__value"
  >
    42
  </span>
</span>
`;

exports[`EuiExpression renders 1`] = `
<button
  aria-label="aria-label"
  class="euiExpression testClass1 testClass2 euiExpression-isClickable euiExpression-isUppercase euiExpression-inline euiExpression--secondary"
  data-test-subj="test subject string"
>
  <span
    class="euiExpression__description"
  >
    the answer is
  </span>
   
  <span
    class="euiExpression__value"
  >
    42
  </span>
</button>
`;
